[project]
name = "demapples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyinstrument>=5.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demapples"]

[dependency-groups]
dev = [
    "icecream>=2.1.8",
    "pytest>=9.0.2",
]
